Material viewport mode crash on node with more than 64 outputs. #51007

Closed
opened 2017-03-20 15:20:51 +01:00 by Lex · 9 comments

System Information
Windows 10 x64 home on Nvidia GTX 1070 with latest WHQL drivers.

Blender Version
2.78c

Short description of error
"Material" viewport mode will crash if any if material group nodes contains more than 64 inputs/outputs. "Render" viewport mode will work fine though...

Exact steps for others to reproduce the error

  1. Open attached file.
  2. Switch viewport mode to "Material".
  3. In next 1-10 seconds Blender will crash .

P.S. It may sounds funny & not practical limitation but not for me - in my "[Real Materials ]]" series those [ http:*www.techkind.org/Blender/showcase_non-metals_dust_settings.jpg | tricky collapseable sections with options sliders allows to keep things simple and use more than 64 material parameters...

[Bugreports] Material viewport mode crash on node with more than 64 outputs.blend

**System Information** Windows 10 x64 home on Nvidia GTX 1070 with latest WHQL drivers. **Blender Version** 2.78c **Short description of error** "Material" viewport mode will crash if any if material group nodes contains more than 64 inputs/outputs. "Render" viewport mode will work fine though... **Exact steps for others to reproduce the error** 1. Open attached file. 2. Switch viewport mode to "Material". 3. [In next 1-10 seconds Blender will crash ](http://www.techkind.org/Blender/[Bugreports]_64_outputs.png). P.S. It may sounds funny & not practical limitation but not for me - in my "[Real Materials ]]" series those [[ http:*www.techkind.org/Blender/showcase_non-metals_dust_settings.jpg | tricky collapseable sections ](https:*blendermarket.com/products/real-materials-vol-6) with options sliders allows to keep things simple and use more than 64 material parameters... [[Bugreports] Material viewport mode crash on node with more than 64 outputs.blend](https://archive.blender.org/developer/F516529/_Bugreports__Material_viewport_mode_crash_on_node_with_more_than_64_outputs.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Lex4art

Added subscriber: @Lex4art

Added subscribers: @mont29, @Sergey

Added subscribers: @mont29, @Sergey
Sergey Sharybin self-assigned this 2017-03-22 17:25:25 +01:00

The issue is coming from hardcoded MAX_SOCKET set to 64. I've tried to remove such a static limit, but it's not so trivial within the current nodes design, especially for the texture nodes. I think it is safe to bump this constant to 512. This will only be ~16K extra stack memory usage per thread during evaluation which is really small for the modern systems.

@mont29, do you have any string opinion here?

The issue is coming from hardcoded MAX_SOCKET set to 64. I've tried to remove such a static limit, but it's not so trivial within the current nodes design, especially for the texture nodes. I think it is safe to bump this constant to 512. This will only be ~16K extra stack memory usage per thread during evaluation which is really small for the modern systems. @mont29, do you have any string opinion here?
Author

In #51007#424324, @Sergey wrote:
The issue is coming from hardcoded MAX_SOCKET set to 64. I've tried to remove such a static limit, but it's not so trivial within the current nodes design, especially for the texture nodes. I think it is safe to bump this constant to 512. This will only be ~16K extra stack memory usage per thread during evaluation which is really small for the modern systems.

At least prevent it from crashing Blender, please ). "Material" viewport mode will not work with my complex materials anyway , too many nodes...

> In #51007#424324, @Sergey wrote: > The issue is coming from hardcoded MAX_SOCKET set to 64. I've tried to remove such a static limit, but it's not so trivial within the current nodes design, especially for the texture nodes. I think it is safe to bump this constant to 512. This will only be ~16K extra stack memory usage per thread during evaluation which is really small for the modern systems. At least prevent it from crashing Blender, please ). "Material" viewport mode will [not work with my complex materials anyway ](https://developer.blender.org/T49381), too many nodes...

@Sergey think raising hard limit is fine yes.

@Sergey think raising hard limit is fine yes.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

The fix is in Git. Thanks for the report, closing!

The fix is in Git. Thanks for the report, closing!
Author

Thank you all very much )

Thank you all very much )
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51007
No description provided.