Fix/workaround T51007: Material viewport mode crash on node with more than 64 outputs

Ideally we need to find a way to remove such a static limit here, but it's not so
trivial to implement for texture nodes. Requires some bigger system redesign there.

Just raising limit for now, which is fine for modern systems.